--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: WELCOME TO KUNALCODES007 HOMEPAGE!
-description: feel free to bookmark to keep an eye on my future projects
+description: FEEL FREE TO BOOKMARK TO KEEP AN EYE ON MY FUTURE PROJECTS :)
